# LaserAnalysisAI

./: .gitignore  README.md  laserlab_cli_launcher.py  laserlab_launcher.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: RELEASE.md  fixture_catalog.md  researcher_workflow.md
gui/: frame_viewer.py  lab_dashboard.py  main_window.py  ocr_processor.py  video_loader.py
laserlab/: __init__.py  app_api.py  artifacts.py  blinding.py  bundle.py  cli.py  controls.py  detectors.py  fixtures.py  ingest.py  manifest.py  pipeline.py  preprocessing.py  protocols.py  provenance.py  report.py  review.py  sampling.py  scientific.py  stats.py  synthetic.py
release_dumps/: release-demo-summary.json  release-demo-top-candidates.csv
sample_media/: ATTRIBUTION.md  commons-focused-laguerre-gaussian.webm  commons-young-double-slit.ogv  fixture_manifest.json
scripts/: build_release.py  build_windows_exe.ps1  capture_screenshots.py  character_detection.py  frame_extraction.py  image_processing.py  run_fixture_demo.ps1  run_fixture_demo.py
tests/: test_laserlab.py
tests/golden/: scientific_summary.json
utils/: common.py
