[project]
name = "laseranalysisai"
version = "0.4.0"
description = "Blinded signal validation pipeline for laser capture analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "opencv-python>=4.11,<5",
  "numpy>=1.26,<3",
  "matplotlib>=3.8,<4",
  "pytesseract>=0.3.10,<0.4",
  "PyQt5>=5.15,<6",
  "python-dotenv>=1,<2",
]

[project.optional-dependencies]
test = []
build = ["pyinstaller>=6,<7"]

[project.scripts]
laserlab = "laserlab.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
